--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,13 @@
-*{
-    font-family:  sans-serif;
-  }
-
-/*#sub_info {
-    position: absolute;
-    top: 80%;
-    left: 10%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 20px;
-    -webkit-transition: all 300ms ease;
-    transition: all 300ms ease;
-    text-shadow: 0 0 0.2em #000, 0 0 0.2em #000,0 0 0.2em #000;
-    text-transform: uppercase;
-}*/
-.slide {
-    position: relative;
-}
-
-#texto_carousel--site {
-  background-attachment: fixed;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  position: absolute;
-  margin-top: -50px;
-  margin-left: 20px;
+.modal_loadin {
+  display:    block;
+  position:   fixed;
+  z-index:    1000;
+  top:        0;
+  left:       0;
+  height:     100%;
+  width:      100%;
+  background: rgba( 255, 255, 255, .8 ) 
+              url('http://gusttavodev.com/ajax-loader_azul.gif') 
+              50% 50% 
+              no-repeat;
 }
